--- a/.github/workflows/e2e-pf.yml
+++ b/.github/workflows/e2e-pf.yml
@@ -13,17 +13,23 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
-      
+        uses: actions/checkout@v2
+        
       - name: Setup node
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v2
 
       - name: Cypress tests
+        id: cypress-tests
         uses: cypress-io/github-action@v4.2.0
         with:
           install-command: npm install
           command: npm run cy:run
-      
+
+  upload-test-report:
+    needs: e2e-tests
+    runs-on: ubuntu-latest
+    if: ${{ always() }}  
+    steps:
       - name: Upload Test Report
         uses: actions/upload-artifact@v2
         with:
